welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value T
  T= new Array[Int](num)
  ^golomb:6: error: not found: value T
  T(0)=test
  ^golomb:10: error: value =< is not a member of Int
    while (test !=0 && avance=<num){
                             ^golomb:13: error: not found: value T
      T(avance)=nombre
      ^golomb:7: error: type mismatch;
 found   : Unit
 required: Int
  while (avance<num){
  ^